--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head>_<head
+<body>
+<div class="wrapper">
+<header class="header">
   <meta charset="UTF-8">
-  <title>app.creation</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
       <header class="header">
-          <div class="logo"app.creation</div>
+          <div class="logo">app.creation</div>
           <nav class="menu">
               <a class="menu__item" href="#">start</a>
+              <a class="menu__item" href="#">services</a>
               <a class="menu__item" href="#">about</a>
               <a class="menu__item" href="#">blog</a>
               <a class="menu__item" href="#">contact us</a>
