--- a/index.html
+++ b/index.html
@@ -5,20 +5,27 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
   <div class="wrapper">
     <header class="header">
-      <!-- <div class="logo">app.creation</div> -->
-        <div class="logo"></div>
-      <nav class="menu">
+
+<div class="logo">
+        <div class="logo__circle logo__circle_color_dark-blue"></div>
+        <div class="logo__circle logo__circle_color_blue"></div>
+        app.creation
+      </div>
+
+
+
+
+<nav class="menu">
         <a class="menu__item" href="#">start</a>
         <a class="menu__item" href="#">services</a>
         <a class="menu__item" href="#">about</a>
         <a class="menu__item" href="#">blog</a>
-        <a class="menu__item" href="#">contact us</a>
-      </nav>
+        <a class="menu__item menu__item_active" href="#">contact us</a>
+</nav>
     </header>
     <section class="main-section">
         <main class="main-content">
