--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <a class="menu__item" href="#">about</a>
         <a class="menu__item" href="#">blog</a>
         <a class="menu__item" href="#">contact us</a>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </nav>
     </header>
       <section class="main">
