--- a/index.html
+++ b/index.html
@@ -29,20 +29,19 @@
 </nav>
     </header>
       <section class="main">
-          <h1 class="main__title">
-              Building an App Without Design Expertise?
-          </h1>
+        <h1 class="main__title">Building an App <span
+class="main__title-text_highlight">Without
+Design Expertise?</span></h1>
+
           <p  class="main__subtitle">
               I help tech startups design better digital products without
        hiring a full-time designer
            </p>
-           <button class="main__button" type="button" name="button">
-              Schedule free consultation
+            <a class="main__button" href="#">Schedule free consultation</a>
             </button>
         </section>
         </main>
         </div class="image-content">
           <img class="image-content__image" src="#" alt="">
-      </div>
 </body>
 </html>
