--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div class="logo">
         <div class="logo__circle logo__circle_color_dark-blue"></div>
         <div class="logo__circle logo__circle_color_blue"></div>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
         app.creation
       </div>
 
@@ -28,16 +29,17 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </nav>
     </header>
-      <section class="main">
-        <h1 class="main__title">Building an App <span
-class="main__title-text_highlight">Without
-Design Expertise?</span></h1>
-
-          <p  class="main__subtitle">
-              I help tech startups design better digital products without
-       hiring a full-time designer
-           </p>
-            <a class="main__button" href="#">Schedule free consultation</a>
+      <main class="main">
+        <h1 class="main__title">
+          Building an App
+          <span class="main__title-text_highlight">
+            Without Design Expertise?
+          </span>
+        </h1>
+        <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
+        <a class="main__button" href="#">
+          Schedule free consultation
+        </a>
             </button>
         </section>
         </main>
