--- a/index.html
+++ b/index.html
@@ -5,22 +5,31 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div class="wrapper">
     <header class="header">
-
-<div class="logo">
+      <div class="logo">
         <div class="logo__circle logo__circle_color_dark-blue"></div>
         <div class="logo__circle logo__circle_color_blue"></div>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-        app.creation
-      </div>
+        <span class="logo__none">app.creation</span>
+      </div class="hamburger-menu">
+         <input id="menu__toggle" type="checkbox" />
+         <label class="menu__button" for="menu__toggle">
+           <span></span>
+         </label>
 
+         <ul class="menu__box">
+     <li><a class="menu__item" href="#">start</a></li>
+     <li><a class="menu__item" href="#">services</a></li>
+     <li><a class="menu__item" href="#">about</a></li>
+     <li><a class="menu__item" href="#">blog</a></li>
+     <li><a class="menu__item" href="#">contact us</a></li>
+   </ul>
+ </div>
 
-
-
-<nav class="menu">
+      <nav class="menu">
         <a class="menu__item" href="#">start</a>
         <a class="menu__item menu__item_active" href="#">services</a>
         <a class="menu__item" href="#">about</a>
@@ -36,7 +45,7 @@
             Without Design Expertise?
           </span>
         </h1>
-        <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
+        <p class="main__subtitle">I help tech startups design better digital products without hiring a&nbsp;full-time designer</p>
         <a class="main__button" href="#">
           Schedule free consultation
         </a>
