--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="fonts.css">
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>app.creation</title>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="fonts.css">
+      <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="wrapper">
     <header class="header">
-      <div class="logo">
-        <div class="logo__circle logo__circle_color_dark-blue"></div>
+        <div class="logo">
+            <div class="logo__circle logo__circle_color_dark-blue"></div>
         <div class="logo__circle logo__circle_color_blue"></div>
         <span class="logo__none">app.creation</span>
-      </div class="hamburger-menu">
-         <input id="menu__toggle" type="checkbox" />
-         <label class="menu__button" for="menu__toggle">
-           <span></span>
-         </label>
-
-         <ul class="menu__box">
-     <li><a class="menu__item" href="#">start</a></li>
-     <li><a class="menu__item" href="#">services</a></li>
-     <li><a class="menu__item" href="#">about</a></li>
-     <li><a class="menu__item" href="#">blog</a></li>
-     <li><a class="menu__item" href="#">contact us</a></li>
-   </ul>
- </div>
+        <div class="container header__container">
+            <div class="menu-burger__header">
+                <span></span>
+            </div>
+            <nav class="header__nav">
+                 <ul class="menu header__menu">
+                 <li><a class="menu__item" href="#">start</a></li>
+                 <li><a class="menu__item" href="#">services</a></li>
+                 <li><a class="menu__item" href="#">about</a></li>
+                 <li><a class="menu__item" href="#">blog</a></li>
+                 <li><a class="menu__item" href="#">contact us</a></li>
+            </ul>
+       </div>
 
       <nav class="menu">
         <a class="menu__item" href="#">start</a>
