--- a/index.html
+++ b/index.html
@@ -1,53 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>app.creation</title>
-      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="fonts.css">
-      <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>app.creation</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="fonts.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="wrapper">
     <header class="header">
-        <div class="logo">
-            <div class="logo__circle logo__circle_color_dark-blue"></div>
-        <div class="logo__circle logo__circle_color_blue"></div>
-        <span class="logo__none">app.creation</span>
-        <div class="container header__container">
-            <div class="menu-burger__header">
-                <span></span>
-            </div>
-            <nav class="header__nav">
-                 <ul class="menu header__menu">
-                 <li><a class="menu__item" href="#">start</a></li>
-                 <li><a class="menu__item" href="#">services</a></li>
-                 <li><a class="menu__item" href="#">about</a></li>
-                 <li><a class="menu__item" href="#">blog</a></li>
-                 <li><a class="menu__item" href="#">contact us</a></li>
-            </ul>
-       </div>
-
-      <nav class="menu">
+      <div class="logo">
+      <div class="logo__circle logo__circle_color_dark-blue"></div>
+      <div class="logo__circle logo__circle_color_blue"></div>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+        app.creation
+      </div>
+        <nav class="nav">
         <a class="menu__item" href="#">start</a>
         <a class="menu__item menu__item_active" href="#">services</a>
         <a class="menu__item" href="#">about</a>
         <a class="menu__item" href="#">blog</a>
         <a class="menu__item" href="#">contact us</a>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-</nav>
-    </header>
+      </nav>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  </header>
+  <section class="main">
+    <h1 class="main__title">
+        Building an App
+      <span class="main__title-text_highlight">
+        Without Design Expertise?
+      </span>
+      </h1>
+      <p class="main__subtitle">I help tech startups design
+      better digital products without hiring a&nbsp;full-time
+      designer</p>
+          <a class="main__button" href="#">Schedule free consultation</a>
       <main class="main">
         <h1 class="main__title">
-          Building an App
-          <span class="main__title-text_highlight">
-            Without Design Expertise?
-          </span>
-        </h1>
-        <p class="main__subtitle">I help tech startups design better digital products without hiring a&nbsp;full-time designer</p>
-        <a class="main__button" href="#">
-          Schedule free consultation
         </a>
             </button>
         </section>
