--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <input id="checkbox_id" type="checkbox">
   <div class="wrapper">
     <header class="header">
       <div class="logo">
@@ -27,6 +29,11 @@
       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   </header>
   <section class="main">
+    <label for="checkbox_id">
+    <div class="nav__burger">
+      <span class="burger__line"></span>
+    </div>
+  </label>
     <h1 class="main__title">
         Building an App
       <span class="main__title-text_highlight">
