--- a/index.html
+++ b/index.html
@@ -1,50 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>app.creation</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <input id="checkbox_id" type="checkbox">
   <div class="wrapper">
     <header class="header">
-      <div class="logo">
-      <div class="logo__circle logo__circle_color_dark-blue"></div>
-      <div class="logo__circle logo__circle_color_blue"></div>
-      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+<div class="logo">
+        <div class="logo__circle logo__circle_color_dark-blue"></div>
+        <div class="logo__circle logo__circle_color_blue"></div>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
         app.creation
       </div>
-      <nav class="nav">
-        <a href="#" class="nav__item">start</a>
-        <a href="#" class="nav__item">services</a>
-        <a href="#" class="nav__item">about</a>
-        <a href="#" class="nav__item">blog</a>
-        <a href="#" class="nav__item">contact us</a>
-      </nav>
-    </header>
-   <section class="main">
-    <label for="checkbox_id">
-    <div class="nav__burger">
-      <span class="burger__line"></span>
-    </div>
-  </label>
-    <h1 class="main__title">
-        Building an App
-      <span class="main__title-text_highlight">
-        Without Design Expertise?
-      </span>
-      </h1>
-      <p class="main__subtitle">I help tech startups design
-      better digital products without hiring a&nbsp;full-time
-      designer</p>
-          <a class="main__button" href="#">Schedule free consultation</a>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
+<nav class="menu">
+        <a class="menu__item" href="#">start</a>
+        <a class="menu__item menu__item_active" href="#">services</a>
+        <a class="menu__item" href="#">about</a>
+        <a class="menu__item" href="#">blog</a>
+        <a class="menu__item" href="#">contact us</a>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+</nav>
+    </header>
+      <section class="main">
+        <h1 class="main__title">Building an App <span
+class="main__title-text_highlight">Without
+Design Expertise?</span></h1>
+
+        <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
+        <a class="main__button" href="#">
+          Schedule free consultation
         </a>
             </button>
         </section>
