--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
 </head>
 <body>
   <div class="wrapper">
-    <header class="header">
-<div class="logo">
-        <div class="logo__circle logo__circle_color_dark-blue"></div>
-        <div class="logo__circle logo__circle_color_blue"></div>
+  <header class="header">
+    <input type="checkbox" id="checkbox"/>
+    <div class="logo">
+      <div class="logo__circle logo__circle_color_dark-blue"></div>
+      <div class="logo__circle logo__circle_color_blue"></div>
+      <div class="logo__title">app.creation</div>
+    </div>
+    <label class="menu__burger" for="checkbox">
+      <span></span>
+    <label>
+    <nav class="menu">
+      <a class="menu__item" href="#">start</a>
+      <a class="menu__item menu__item_active" href="#">services</a>
+      <a class="menu__item" href="#">about</a>
+      <a class="menu__item" href="#">blog</a>
+      <a class="menu__item" href="#">contact us</a>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-        app.creation
-      </div>
-
-<nav class="menu">
-        <a class="menu__item" href="#">start</a>
-        <a class="menu__item menu__item_active" href="#">services</a>
-        <a class="menu__item" href="#">about</a>
-        <a class="menu__item" href="#">blog</a>
-        <a class="menu__item" href="#">contact us</a>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-</nav>
-    </header>
+    </nav>
+  </header>
       <section class="main">
         <h1 class="main__title">Building an App <span
 class="main__title-text_highlight">Without
