--- a/index.html
+++ b/index.html
@@ -3,44 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="wrapper">
-  <header class="header">
-    <input type="checkbox" id="checkbox"/>
-    <div class="logo">
-      <div class="logo__circle logo__circle_color_dark-blue"></div>
-      <div class="logo__circle logo__circle_color_blue"></div>
-      <div class="logo__title">app.creation</div>
-    </div>
-    <label class="menu__burger" for="checkbox">
-      <span></span>
-    <label>
+    <header class="header">
+      <input type="checkbox" id="checkbox"/>
+      <div class="logo">
+        <div class="logo__circle logo__circle_color_dark-blue"></div>
+        <div class="logo__circle logo__circle_color_blue"></div>
+        <div class="logo__title">app.creation</div>
+      </div>
+      <label class="menu__burger" for="checkbox">
+        <span></span>
+       <label>
     <nav class="menu">
       <a class="menu__item" href="#">start</a>
       <a class="menu__item menu__item_active" href="#">services</a>
       <a class="menu__item" href="#">about</a>
       <a class="menu__item" href="#">blog</a>
       <a class="menu__item" href="#">contact us</a>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     </nav>
   </header>
-      <section class="main">
-        <h1 class="main__title">Building an App <span
-class="main__title-text_highlight">Without
-Design Expertise?</span></h1>
-
-        <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
-        <a class="main__button" href="#">
-          Schedule free consultation
-        </a>
-            </button>
-        </section>
-        </main>
-        </div class="image-content">
-          <img class="image-content__image" src="#" alt="">
+  <section class="main">
+    <h1 class="main__title">
+      Building an App
+        <span class="main__title-text_highlight">WithoutDesign Expertise?</span>
+    </h1>
+    <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
+    <a class="main__button" href="#">Schedule free consultation</a>
+  </section>
+ </div class="image-content">
+<img class="image-content__image" src="#" alt="">
 </body>
 </html>
