--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <a class="menu__item" href="#">blog</a>
       <a class="menu__item" href="#">contact us</a>
     </nav>
+    <label for="checkbox_id">
   </header>
   <section class="main">
     <h1 class="main__title">
