--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <label class="menu__burger" for="checkbox">
         <span></span>
-       <label>
+      </label>
     <nav class="menu">
       <a class="menu__item" href="#">start</a>
       <a class="menu__item menu__item_active" href="#">services</a>
@@ -26,12 +26,11 @@
       <a class="menu__item" href="#">blog</a>
       <a class="menu__item" href="#">contact us</a>
     </nav>
-    <label for="checkbox_id">
   </header>
   <section class="main">
     <h1 class="main__title">
       Building an App
-        <span class="main__title-text_highlight">WithoutDesign Expertise?</span>
+        <span class="main__title-text_highlight">Without Design Expertise?</span>
     </h1>
     <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
     <a class="main__button" href="#">Schedule free consultation</a>
