--- a/index.html
+++ b/index.html
@@ -34,8 +34,25 @@
     </h1>
     <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
     <a class="main__button" href="#">Schedule free consultation</a>
+
   </section>
  </div class="image-content">
 <img class="image-content__image" src="#" alt="">
 </body>
 </html>
+
+<div class="loader-container">
+  <div class="loader">
+    <span>0%</span>
+    <span>10%</span>
+    <span>20%</span>
+    <span>30%</span>
+    <span>40%</span>
+    <span>50%</span>
+    <span>60%</span>
+    <span>70%</span>
+    <span>80%</span>
+    <span>90%</span>
+    <span>100%</span>
+  </div>
+</div>
