--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 
 <body>
-  <div class="wrapper">
+  <div class="wrapper"></div>
     <header class="header">
       <input type="checkbox" id="checkbox"/>
       <div class="logo">
