--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 
 <body>
-  <div class="wrapper"></div>
+  <div class="wrapper">
     <header class="header">
       <input type="checkbox" id="checkbox"/>
       <div class="logo">
@@ -36,3 +36,4 @@
     <a class="main__button" href="#">Schedule free consultation</a>
 
   </section>
+  </div>
